2015-11-13 Marco Bodrato <bodrato@mail.dm.unipi.it>

	* mini-gmp/mini-gmp.c: Lazy allocation for mpz_t.
	* mpz/set.c: Use MPZ_NEWALLOC.

2015-11-12  Marc Glisse  <marc.glisse@inria.fr>

	* gmpxx.h (__gmp_fibonacci_function): New class.
	(fibonacci, mpz_class::fibonacci): New functions.
	(__gmp_fac_function, __gmp_primorial_function): Add braces.
	* tests/cxx/t-ops2z.cc: Test fibonacci.
	* doc/gmp.texi (C++ Interface Integers): Document fibonacci.
	Warn about factorial and primorial of negative numbers.

2015-11-10  Marc Glisse  <marc.glisse@inria.fr>

	* gmpxx.h (__gmp_primorial_function): Throw on negative operands.
	* tests/cxx/t-ops2z.cc: Test it.

2015-11-09 Marco Bodrato <bodrato@mail.dm.unipi.it>

	* mpz: Experimental, lazy allocation.

2015-11-09  Marc Glisse  <marc.glisse@inria.fr>

	* tests/cxx/Makefile.am: Move EXTRA_DIST out of WANT_CXX.

2015-11-08 Marco Bodrato <bodrato@mail.dm.unipi.it>

	* mpz/urandomm.c: Use mpn_zero_p to shorten code.

2015-11-08  Marc Glisse  <marc.glisse@inria.fr>

	* gmpxx.h (__gmp_fac_function, __gmp_primorial_function): New classes.
	(__GMPP_DECLARE_UNARY_STATIC_MEMFUN,
	__GMPNN_DECLARE_UNARY_STATIC_MEMFUN,
	__GMPNS_DECLARE_UNARY_STATIC_MEMFUN,
	__GMPNU_DECLARE_UNARY_STATIC_MEMFUN,
	__GMPND_DECLARE_UNARY_STATIC_MEMFUN,
	__GMPN_DECLARE_UNARY_STATIC_MEMFUN,
	__GMP_DECLARE_UNARY_STATIC_MEMFUN, __GMPP_DEFINE_UNARY_STATIC_MEMFUN,
	__GMPNN_DEFINE_UNARY_STATIC_MEMFUN,
	__GMPNS_DEFINE_UNARY_STATIC_MEMFUN,
	__GMPNU_DEFINE_UNARY_STATIC_MEMFUN,
	__GMPND_DEFINE_UNARY_STATIC_MEMFUN, __GMPN_DEFINE_UNARY_STATIC_MEMFUN,
	__GMP_DEFINE_UNARY_STATIC_MEMFUN): New macros.
	(factorial, mpz_class::factorial, primorial, mpz_class::primorial):
	New functions.
	* tests/cxx/t-ops2.cc: Test factorial and primorial.
	* tests/cxx/Makefile.am: Move t-ops2 after
	t-do-exceptions-work-at-all-with-this-compiler.
	* doc/gmp.texi: Document factorial and primorial.
	* NEWS: Likewise.

	* tests/cxx/t-ops2.cc: Remove and split into ...